Fixed variable values for better readability

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -91,17 +91,17 @@
 
 /* Margin */
 @base-margin:                               1rem;
-@base-margin-sm:                            @base-margin/2;
-@base-margin-xs:                            @base-margin/4;
-@base-margin-lg:                            @base-margin*1.5;
-@base-margin-xl:                            @base-margin*2;
+@base-margin-sm:                            @base-margin / 2;
+@base-margin-xs:                            @base-margin / 4;
+@base-margin-lg:                            @base-margin * 1.5;
+@base-margin-xl:                            @base-margin * 2;
 
 /* Padding */
 @base-padding:                              1rem;
-@base-padding-sm:                           @base-padding/2;
-@base-padding-xs:                           @base-padding/4;
-@base-padding-lg:                           @base-padding*1.5;
-@base-padding-xl:                           @base-padding*2;
+@base-padding-sm:                           @base-padding / 2;
+@base-padding-xs:                           @base-padding / 4;
+@base-padding-lg:                           @base-padding * 1.5;
+@base-padding-xl:                           @base-padding * 2;
 
 /* Body */
 @body-bg:                                   @background-body;
@@ -285,7 +285,7 @@
 // 6. Action List
 // ==========================================================================
 
-@action-menu-anchor-padding:                round(@base-padding/3, 1);
+@action-menu-anchor-padding:                round(@base-padding / 3, 1);
 
 // 7. Badge
 // ==========================================================================
@@ -370,7 +370,7 @@
 @datepicker-weekday-color:                  @brand-primary;
 @datepicker-hover-color:                    @gray-10;
 
-@datepicker-rd-padding:                     round(@base-padding/3, 1);
+@datepicker-rd-padding:                     round(@base-padding / 3, 1);
 
 // 12. Dialog
 // ==========================================================================
@@ -409,11 +409,11 @@
 
 @legend-border-color:                       @gray-9;
 @legend-color:                              @gray-3;
-@legend-bottom-margin:                      @base-margin*1.25;
+@legend-bottom-margin:                      @base-margin * 1.25;
 
-@helpblock-margin:                          @base-margin*0.325 0;
+@helpblock-margin:                          (@base-margin * 0.325) 0;
 
-@select-option-margin:                      @base-margin*0.187 @base-margin*0.375;
+@select-option-margin:                      (@base-margin * 0.187) (@base-margin * 0.375);
 
 // Checkbox
 @checkbox-bg:                               @brand-primary;
